# tauri-latest-json

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml
examples/: basic.rs
scripts/: smoke-cli.sh  smoke-generate-current-conf.sh  smoke-generate.sh  smoke-real-tauri-app.sh  test.sh
src/: lib.rs
tests/: cli.rs
