[package]
name = "tauri-latest-json"
version = "0.2.1"
authors = ["Aung Min Khant"]
edition = "2021"
description = "Generate multi-platform Tauri updater latest.json from built installers"
license = "MIT"
repository = "https://github.com/shayyz-code/tauri-latest-json"
readme = "README.md"
keywords = ["tauri", "updater"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
